# app/json_schemas/customer_schema.rb
@@ -14,6 +14,10 @@ class CustomerSchema < JsonApiSchema
       code: { type: :string, nullable: true, example: "BUYER1" },
       email: { type: :string, example: "alice@example.com" },
       allow_charges: { type: :boolean, example: false },
+      terms_and_conditions_accepted_at: {
+        type: :string, format: "date-time", nullable: true,
+        example: "2022-03-12T15:55:00.000+11:00",
+      },
     }
   end
 
@@ -25,6 +29,7 @@ class CustomerSchema < JsonApiSchema
     attributes.except(
       :id,
       :allow_charges,
+      :terms_and_conditions_accepted_at,
     )
   end
 
