# app/serializers/api/v1/customer_serializer.rb
@@ -4,7 +4,7 @@ module Api
   module V1
     class CustomerSerializer < BaseSerializer
       attributes :id, :enterprise_id, :first_name, :last_name, :code, :email,
-                 :allow_charges
+                 :allow_charges, :terms_and_conditions_accepted_at
 
       belongs_to :enterprise, links: {
         related: ->(object) {
