# swagger/v1/swagger.yaml
@@ -63,6 +63,11 @@ components:
                   allow_charges:
                     type: boolean
                     example: false
+                  terms_and_conditions_accepted_at:
+                    type: string
+                    format: date-time
+                    nullable: true
+                    example: '2022-03-12T15:55:00.000+11:00'
                 required:
                 - id
                 - enterprise_id
@@ -71,6 +76,7 @@ components:
                 - code
                 - email
                 - allow_charges
+                - terms_and_conditions_accepted_at
               relationships:
                 type: object
                 properties:
@@ -137,6 +143,11 @@ components:
                     allow_charges:
                       type: boolean
                       example: false
+                    terms_and_conditions_accepted_at:
+                      type: string
+                      format: date-time
+                      nullable: true
+                      example: '2022-03-12T15:55:00.000+11:00'
                   required:
                   - id
                   - enterprise_id
@@ -145,6 +156,7 @@ components:
                   - code
                   - email
                   - allow_charges
+                  - terms_and_conditions_accepted_at
                 relationships:
                   type: object
                   properties:
